--- a/Portfolio/vercel.json
+++ b/Portfolio/vercel.json
@@ -1,7 +1,8 @@
 {
-    "build": {
-        "env": {
-            "NODE_ENV": "development"
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/"
         }
-    }
+    ]
 }
